# fitness-rpg

./: .dev.vars.example  .env.example  .gitignore  Cargo.toml  README.md  SETUP.md  STATS_CONFIG.md  claude.md  debug_output.json  package-lock.json  package.json  preview.html  schema.sql  tsconfig.json  wrangler.toml
.claude/: settings.local.json
.wrangler/tmp/bundle-4hiFPO/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/bundle-7QXPls/: middleware-loader.entry.ts
.wrangler/tmp/bundle-T8MWE9/: middleware-loader.entry.ts
.wrangler/tmp/bundle-ZjO3r0/: middleware-loader.entry.ts
.wrangler/tmp/dev-3uENqj/: be17d372b5de37c86b963ab2699ced531f9c1a69-index.wasm  shim.js  shim.js.map
.wrangler/tmp/dev-9S8h5x/: 0c3738d56c16fc463051e6e14e79d9d5bb829ad0-index.wasm  shim.js  shim.js.map
migrations/: add_friends.sql
plans/: stat-system-analysis.md
public/: app.js  chao-stats.css  chao-stats.js  index.html  stats-dashboard.html  stats-preview.html  style.css
scripts/: fix-user-stats-schema.sql  force-sync-all-users.ts  init-db.sh  subscribe-webhook.ts
src/: cron.ts  db.rs  errors.rs  handlers.rs  helpers.rs  index.ts  lib.rs  models.rs  types.ts
src/config/: stats.ts  xp.ts
src/db/: activities.ts  client.ts  friendships.ts  jobs.ts  user-stats.ts  users.ts
src/jobs/: importer.ts  rate-limiter.ts
src/routes/: auth.ts  friends.ts  leaderboard.ts  stats.ts  webhooks.ts
src/stats/: calculator.ts  xp.ts
src/strava/: auth.ts  client.ts  errors.rs  mod.rs  models.rs  strava.rs  types.ts
src/utils/: logger.ts  response.ts  time.ts
(+41 files in other folders)
