[package]
name = "fitness-rpg-worker"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
log = "0.4.20"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.194"
serde_json = "1.0.111"
thiserror = "1.0.56"
web-sys = "0.3.50"
worker = { version = "0.0.18", features = ["d1"] }
wasm-bindgen = "0.2.84"
strum = "0.25"
strum_macros = "0.25"

[profile.release]
lto = true
strip = true
codegen-units = 1
